--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Third Repo</title>
 </head>
 <body>
-    
+    <h1>Akash</h1>
+    <h1>Tufayel</h1>
+    <h1>Asif</h1>
 </body>
 </html>
